--- a/projects/lib/src/admin/components/assets/asset-upload-button/asset-upload-button.component.html
+++ b/projects/lib/src/admin/components/assets/asset-upload-button/asset-upload-button.component.html
@@ -11,6 +11,7 @@
 <ng-template #confirmAssetUploadTemplate>
   <cms-asset-upload-confirm
     [files]="selectedFiles"
+    [beforeAssetUpload]="beforeAssetUpload"
     (cancel)="handleCancel()"
     (done)="handleAssetsUploaded($event)"
   ></cms-asset-upload-confirm>
