--- a/projects/lib/src/admin/components/assets/asset-upload-confirm/asset-upload-confirm.component.scss
+++ b/projects/lib/src/admin/components/assets/asset-upload-confirm/asset-upload-confirm.component.scss
@@ -3,16 +3,23 @@
   height: 100px;
   overflow: hidden;
   flex: 0 0 auto;
-  & > div {
+
+  &>div {
     background-size: cover;
   }
 }
 
 .file-details {
   word-break: break-all;
+  flex: 1 1 auto;
 
   h6,
   p {
     margin: 0;
   }
+}
+
+.file-upload-status {
+  flex: 0 0 auto;
+  align-self: center;
 }
