--- a/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
+++ b/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
@@ -1,33 +1,25 @@
-<div class="modal-header">
-    <h4 class="modal-title">Browse Assets</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
-        <span aria-hidden="true">&times;</span>
+<div class="modal-content">
+  <div class="modal-header">
+    <h5 class="modal-title">Select an Asset</h5>
+  </div>
+  <cms-asset-management
+    [selectable]="true"
+    [multiple]="multiple"
+    [defaultListOptions]="defaultListOptions"
+    [showListModeToggle]="false"
+    [showAssetStatus]="false"
+    [tagOptions]="tagOptions"
+    [assetTypes]="assetTypes"
+    [(selected)]="selected"
+    [listMode]="'grid'"
+  ></cms-asset-management>
+  <div class="modal-footer">
+    <button class="btn btn-light" (click)="modal.dismiss()">Cancel</button>
+    <button
+      class="btn btn-primary"
+      (click)="modal.close(multiple ? selected : selected[0])"
+    >
+      Select
     </button>
+  </div>
 </div>
-<div class="modal-body">
-    <form [formGroup]="searchForm">
-        <div class="form-group">
-            <label for="asset-search" ngbAutofocus class="sr-only">Search for an asset by title</label>
-            <input type="text" class="form-control" formControlName="search" id="asset-search"
-                placeholder="Search for an asset by title">
-        </div>
-    </form>
-    <div *ngIf="!list?.Items?.length && !loading">
-        <cms-no-results message="No assets were found"></cms-no-results>
-    </div>
-    <div class="asset-list" *ngIf="list?.Items?.length">
-        <div class="asset-item" *ngFor="let asset of list.Items" (click)="modal.close(asset)">
-            <img class="asset-item_img" src="{{asset.Url}}" alt="{{asset.title}}">
-        </div>
-    </div>
-    <div class="pagination-container">
-        <ngb-pagination [maxSize]="5" [boundaryLinks]="true" *ngIf="list" [collectionSize]="list.Meta.TotalCount"
-            [(pageSize)]="list.Meta.PageSize" [(page)]="list.Meta.Page" aria-label="Pagination Buttons"
-            (pageChange)="changePage($event)">
-        </ngb-pagination>
-    </div>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="modal.dismiss()">Close</button>
-</div>
-<ngx-spinner class="asset-picker-spinner" type = "ball-beat" bdColor="rgba(255, 255, 255, 0.38)" color="#969696" [fullScreen]="false"></ngx-spinner>
