--- a/projects/lib/src/admin/components/asset-management/asset-management.component.html
+++ b/projects/lib/src/admin/components/asset-management/asset-management.component.html
@@ -36,6 +36,7 @@
           [showAssetStatus]="showAssetStatus"
           [selected]="selected"
           (selectedChange)="handleSelectedChange($event)"
+          (pageChangeEvent)="handlePageChange($event)"
           [selectable]="selectable"
           [multiple]="multiple"
           [mode]="listMode"
