Pagination in asset list component grid view

--- a/projects/lib/src/admin/components/asset-list/asset-list.component.html
+++ b/projects/lib/src/admin/components/asset-list/asset-list.component.html
@@ -120,4 +120,11 @@
       </figcaption>
     </figure>
   </div>
+  <ngb-pagination *ngIf="meta" 
+                  class="d-flex justify-content-center"
+                  [collectionSize]="meta.TotalCount"
+                  [pageSize]="meta.PageSize"
+                  [(page)]="meta.Page"
+                  (pageChange)="pageChangeEvent.emit($event)"></ngb-pagination>
+  <div class="container" *ngIf="!items || !items.length">
 </div>
