--- a/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
+++ b/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
@@ -10,6 +10,7 @@
     [showAssetStatus]="false"
     [tagOptions]="tagOptions"
     [assetTypes]="assetTypes"
+    [beforeAssetUpload]="beforeAssetUpload"
     [(selected)]="selected"
     [listMode]="'grid'"
   ></cms-asset-management>
