--- a/projects/lib/src/admin/components/asset-upload-confirm/asset-upload-confirm.component.html
+++ b/projects/lib/src/admin/components/asset-upload-confirm/asset-upload-confirm.component.html
@@ -7,14 +7,7 @@
       class="d-flex align-items-start"
       *ngFor="let file of files; let i = index"
     >
-      <div class="file-preview img-thumbnail">
-        <div
-          class="h-100 w-100 overflow-hidden"
-          [style.background-image]="
-            file.dataUrl ? 'url(\'' + file.dataUrl + '\')' : ''
-          "
-        ></div>
-      </div>
+      <cms-thumbnail [file]="file" [width]="100" [height]="100"></cms-thumbnail>
       <div class="file-details flex-auto p-2">
         <p><b>File Name:</b> {{ file.name }}</p>
         <p><b>Type:</b> {{ file.type }}</p>
