add title to ThumbnailComponent
Use caption, alt, or default to "untitled"

--- a/projects/lib/src/admin/components/thumbnail/thumbnail.component.html
+++ b/projects/lib/src/admin/components/thumbnail/thumbnail.component.html
@@ -4,6 +4,7 @@
   [style.width]="width"
   [style.height]="height"
   [ngSwitch]="ready"
+  [title]="caption || ready ? alt || 'Untitled' : 'loading'"
 >
   <button
     *ngIf="showRemove"
