account for scrollbar in dynamic image grid sizes

--- a/projects/lib/src/admin/components/asset-list/asset-list.component.html
+++ b/projects/lib/src/admin/components/asset-list/asset-list.component.html
@@ -69,7 +69,7 @@
 
 <div
   *ngIf="mode === 'grid' && !shrink"
-  class="overflow-auto h-100"
+  class="overflow-auto h-100 w-100"
   #gridContainer
 >
   <cms-thumbnail
