new event emitter to track character count in html editor

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -303,6 +303,7 @@
               [initialValue]="page.Content"
               [editorOptions]="editorOptions"
               (htmlChange)="onPageContentChange($event)"
+              (charCount)="onCharCountChange($event)"
             ></cms-html-editor>
           </div>
         </ng-template>
