handle "errors" from dismissed modals

--- a/projects/lib/src/admin/components/carousel-editor/carousel-editor.component.html
+++ b/projects/lib/src/admin/components/carousel-editor/carousel-editor.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h4 class="modal-title">Carousel Builder</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('user dismissed modal')">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
