--- a/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
+++ b/projects/lib/src/admin/components/page-preview-modal/page-preview-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">{{modalTitle || 'Page Preview'}}</h4>
-  <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
+  <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('user dismissed modal')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
