--- a/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
+++ b/projects/lib/src/admin/components/asset-picker/asset-picker.component.html
@@ -15,7 +15,7 @@
     [listMode]="'grid'"
   ></cms-asset-management>
   <div class="modal-footer">
-    <button class="btn btn-light" (click)="modal.dismiss()">Cancel</button>
+    <button class="btn btn-light" (click)="modal.dismiss('user dismissed modal')">Cancel</button>
     <button
       class="btn btn-primary"
       (click)="modal.close(multiple ? selected : selected[0])"
