--- a/projects/lib/src/admin/components/section-picker/section-picker.component.html
+++ b/projects/lib/src/admin/components/section-picker/section-picker.component.html
@@ -4,7 +4,7 @@
     type="button"
     class="close"
     aria-label="Close"
-    (click)="modal.dismiss('Cross click')"
+    (click)="modal.dismiss('user dismissed modal')"
   >
     <span aria-hidden="true">&times;</span>
   </button>
