--- a/projects/lib/src/admin/components/section-picker/section-picker.component.scss
+++ b/projects/lib/src/admin/components/section-picker/section-picker.component.scss
@@ -6,3 +6,9 @@
   width: 100%;
   overflow: hidden;
 }
+
+.modal-body {
+  max-height: calc(100vh - 200px);
+  overflow: auto;
+  background: #f2f2f2;
+}
