--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -74,7 +74,7 @@
 
 <!-- DETAIL VIEW -->
 <div class="d-flex main-content" *ngIf="selected">
-  <div class="flex-shrink-0 flex-grow-0 border-right">
+  <div class="flex-shrink-1 flex-grow-0 border-right">
     <div class="d-flex align-items-center justify-content-start p-3">
       <div class="flex-grow-0 flex-shrink-1 pr-2">
         <button
@@ -108,7 +108,7 @@
       </div> -->
       <ng-content select=".cms-toolbar-additions"></ng-content>
     </div>
-    <div class="table-responsive">
+    <div class="table-responsive table-shrunk">
       <table class="table table-hover">
         <thead>
           <tr>
