--- a/projects/lib/src/admin/components/page-list/page-list.component.scss
+++ b/projects/lib/src/admin/components/page-list/page-list.component.scss
@@ -12,6 +12,11 @@
 .table-responsive {
   height: calc(100% - 70px);
   border-top: 1px solid #dee2e6;
+
+  &.table-shrunk {
+    max-width: 300px;
+    overflow-x: hidden;
+  }
 }
 
 .table-responsive>.table>thead>tr>th {
