--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -53,7 +53,7 @@
               [status]="contentDoc.Doc.Active"
               class="mr-1"
             ></cms-status-icon>
-            {{ contentDoc.Doc.Title }}
+            {{ contentDoc.Doc.NavigationTitle || contentDoc.Doc.Title }}
           </td>
           <td>{{ contentDoc.Doc.Author }}</td>
           <td>{{ contentDoc.Doc.DateCreated | date: "short" }}</td>
@@ -119,7 +119,7 @@
           <tr *ngFor="let page of list" (click)="selectPage(page)">
             <td>
               <cms-status-icon [status]="page.Doc.Active"></cms-status-icon>
-              {{ page.Doc.Title }}<br />
+              {{ page.Doc.NavigationTitle || page.Doc.Title }}<br />
               <small class="text-muted">
                 Updated by {{ page.Doc.LastUpdatedBy }} on
                 {{ page.Doc.DateLastUpdated | date: "short" }}
