Don't allow duplicate slugs
Using the pages available in the current page list, do not allow duplicate slugs on the page editor. Disable the save action when duplicate slugs are detected.

Note: we might need to make this an async validation if we get to the point where the page list isn't showing all of the pages that should be validated against. (whenever we add search/filtering back in)

--- a/projects/lib/src/admin/components/page-editor/page-editor.component.html
+++ b/projects/lib/src/admin/components/page-editor/page-editor.component.html
@@ -152,6 +152,9 @@
                 [(ngModel)]="page.Url"
                 [readOnly]="automaticUrl"
                 [disabled]="isLocked"
+                (keyup)="onPageUrlKeyUp()"
+                (change)="onPageUrlChange()"
+                [ngClass]="{ 'is-invalid': duplicateUrl }"
                 required
                 aria-describedby="pageUrlHelp"
                 [placeholder]="
@@ -161,7 +164,18 @@
                 "
               />
             </div>
-            <small id="pageUrlHelp" class="form-text text-muted"
+            <small
+              id="pageUrlError"
+              class="form-text text-danger"
+              *ngIf="duplicateUrl"
+            >
+              This page location is already in use. Please choose something
+              different or remove the other page.
+            </small>
+            <small
+              id="pageUrlHelp"
+              class="form-text text-muted"
+              *ngIf="!duplicateUrl"
               >This must be unique across all of your pages. Kebab case
               recommended, use text relevant to this page for best SEO results.
             </small>
