--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -132,6 +132,7 @@
   </div>
   <div class="flex-grow-1 flex-shrink-1">
     <cms-page-editor
+      [usedSlugs]="usedSlugs"
       [lockedSlugs]="lockedSlugs"
       (backClicked)="goToList($event)"
       (pageSaved)="onPageSaved($event)"
