add beforeAssetUpload to cms-page-list

--- a/projects/lib/src/admin/components/asset-management/asset-management.component.html
+++ b/projects/lib/src/admin/components/asset-management/asset-management.component.html
@@ -41,7 +41,7 @@
           [(assetDetail)]="assetDetail"
           [showAssetStatus]="showAssetStatus"
           [selected]="selected"
-          (selectedChange)="handleSelectedChange($event)"
+          (selectedAssetChange)="handleselectedAssetChange($event)"
           (pageChangeEvent)="handlePageChange($event)"
           [selectable]="selectable"
           [multiple]="multiple"
