--- a/projects/lib/src/admin/components/page-list/page-list.component.html
+++ b/projects/lib/src/admin/components/page-list/page-list.component.html
@@ -144,6 +144,11 @@
       [parentResourceType]="parentResourceType"
       [parentResourceID]="parentResourceID"
       [document]="selected"
+      [tagOptions]="tagOptions"
+      [assetTypes]="assetTypes"
+      [defaultListOptions]="defaultListOptions"
+      [beforeAssetUpload]="beforeAssetUpload"
+      (selectedAssetChange)="selectedAssetChange.emit($event)"
     >
     </cms-page-editor>
   </div>
