--- a/projects/lib/src/admin/components/asset-list/asset-list.component.html
+++ b/projects/lib/src/admin/components/asset-list/asset-list.component.html
@@ -1,67 +1,73 @@
-<div class="h-100 table-responsive" *ngIf="mode === 'table' || shrink">
-  <table class="table table-hover asset-list_table">
-    <colgroup>
-      <col style="width: 1%" />
-    </colgroup>
-    <thead>
-      <tr>
-        <th><span class="sr-only">Image Preview</span></th>
-        <th>Title</th>
-        <th *ngIf="!shrink">Type</th>
-        <th *ngIf="!shrink">Dimensions</th>
-        <th *ngIf="!shrink">Last Updated</th>
-        <th *ngIf="!shrink && showAssetStatus">Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr
-        *ngFor="let asset of items; index as i"
-        [ngClass]="{
-          'table-primary': isAssetSelected(asset),
-          'table-active': assetDetail && assetDetail.ID === asset.ID
-        }"
-        (click)="handleAssetClick(asset)"
-      >
-        <td>
-          <cms-thumbnail
-            [size]="'small'"
-            [height]="60"
-            [width]="60"
-            [asset]="asset"
-          ></cms-thumbnail>
-        </td>
-        <td>
-          {{ asset.Title || "---" }}
-          <br />
-          <small class="text-muted">{{ asset.FileName }}</small>
-        </td>
-        <td *ngIf="!shrink">
-          {{ asset.Metadata.ContentType || "---" }}
-        </td>
-        <td *ngIf="!shrink">
-          {{ asset.Metadata | assetDimensions }}
-        </td>
-        <td *ngIf="!shrink">
-          {{ asset.History.DateUpdated | date: "short" }}
-        </td>
-        <td *ngIf="!shrink && showAssetStatus">
-          <cms-status-icon
-            [status]="asset.Active"
-            activeText="Active"
-            inactiveText="Inactive"
-            inline="true"
-          ></cms-status-icon>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <ngb-pagination
+<div class="h-100 d-flex flex-column" *ngIf="mode === 'table' || shrink">
+  <div class="table-responsive">
+    <table class="table table-hover asset-list_table">
+      <colgroup>
+        <col style="width: 1%" />
+      </colgroup>
+      <thead>
+        <tr>
+          <th><span class="sr-only">Image Preview</span></th>
+          <th>Title</th>
+          <th *ngIf="!shrink">Type</th>
+          <th *ngIf="!shrink">Dimensions</th>
+          <th *ngIf="!shrink">Last Updated</th>
+          <th *ngIf="!shrink && showAssetStatus">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr
+          *ngFor="let asset of items; index as i"
+          [ngClass]="{
+            'table-primary': isAssetSelected(asset),
+            'table-active': assetDetail && assetDetail.ID === asset.ID
+          }"
+          (click)="handleAssetClick(asset)"
+        >
+          <td>
+            <cms-thumbnail
+              [size]="'small'"
+              [height]="60"
+              [width]="60"
+              [asset]="asset"
+            ></cms-thumbnail>
+          </td>
+          <td class="asset-title">
+            {{ asset.Title || "---" }}
+            <br />
+            <small class="text-muted">{{ asset.FileName }}</small>
+          </td>
+          <td *ngIf="!shrink">
+            {{ asset.Metadata.ContentType || "---" }}
+          </td>
+          <td *ngIf="!shrink">
+            {{ asset.Metadata | assetDimensions }}
+          </td>
+          <td *ngIf="!shrink">
+            {{ asset.History.DateUpdated | date: "short" }}
+          </td>
+          <td *ngIf="!shrink && showAssetStatus">
+            <cms-status-icon
+              [status]="asset.Active"
+              activeText="Active"
+              inactiveText="Inactive"
+              inline="true"
+            ></cms-status-icon>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div
+    class="d-flex justify-content-center align-items-center"
     *ngIf="meta && meta.TotalPages > 1"
-    [collectionSize]="meta.TotalCount"
-    [pageSize]="meta.PageSize"
-    [(page)]="meta.Page"
-    (pageChange)="pageChangeEvent.emit($event)"
-  ></ngb-pagination>
+  >
+    <ngb-pagination
+      [collectionSize]="meta.TotalCount"
+      [pageSize]="meta.PageSize"
+      [(page)]="meta.Page"
+      (pageChange)="pageChangeEvent.emit($event)"
+    ></ngb-pagination>
+  </div>
   <div class="container" *ngIf="!items || !items.length">
     <cms-no-results message="No assets found"></cms-no-results>
   </div>
@@ -69,28 +75,33 @@
 
 <div
   *ngIf="mode === 'grid' && !shrink"
-  class="overflow-auto h-100 w-100"
   #gridContainer
+  class="d-flex flex-column h-100 overflow-hidden"
 >
-  <cms-thumbnail
-    *ngFor="let asset of items"
-    class="pl-2 pt-2 float-left"
-    [size]="'medium'"
-    [height]="columnWidth"
-    [width]="columnWidth"
-    [asset]="asset"
-    [selected]="isAssetSelected(asset)"
-    (click)="handleAssetClick(asset)"
-    [caption]="asset.Title || asset.FileName"
-  ></cms-thumbnail>
-
-  <ngb-pagination
+  <div *ngIf="columnWidth" class="grid-list-container">
+    <cms-thumbnail
+      *ngFor="let asset of items"
+      class="pl-2 pt-2 float-left"
+      [size]="'medium'"
+      [height]="columnWidth"
+      [width]="columnWidth"
+      [asset]="asset"
+      [selected]="isAssetSelected(asset)"
+      (click)="handleAssetClick(asset)"
+      [caption]="asset.Title || asset.FileName"
+    ></cms-thumbnail>
+  </div>
+  <div
+    class="d-flex justify-content-center align-items-center"
     *ngIf="meta && meta.TotalPages > 1"
-    [collectionSize]="meta.TotalCount"
-    [pageSize]="meta.PageSize"
-    [(page)]="meta.Page"
-    (pageChange)="pageChangeEvent.emit($event)"
-  ></ngb-pagination>
+  >
+    <ngb-pagination
+      [collectionSize]="meta.TotalCount"
+      [pageSize]="meta.PageSize"
+      [(page)]="meta.Page"
+      (pageChange)="pageChangeEvent.emit($event)"
+    ></ngb-pagination>
+  </div>
   <div class="container" *ngIf="!items || !items.length">
     <cms-no-results message="No assets found"></cms-no-results>
   </div>
