--- a/projects/lib/src/admin/components/asset-list/asset-list.component.scss
+++ b/projects/lib/src/admin/components/asset-list/asset-list.component.scss
@@ -29,6 +29,22 @@
   }
 }
 
+.table-responsive {
+  flex: 1 1 auto;
+}
+
+.asset-title {
+  max-width: 300px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.grid-list-container {
+  flex: 1 1 auto;
+  overflow: auto;
+}
+
 .asset-table_figure {
   margin: 0;
   width: 60px;
